// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<div>
  <div
    className="quality-profile-grid"
  >
    <div
      className="quality-profile-grid-left"
    >
      <ProfileRules
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 10,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 3,
          }
        }
      />
      <ProfileExporters
        exporters={[]}
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 10,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 3,
          }
        }
      />
    </div>
    <div
      className="quality-profile-grid-right"
    >
      <ProfileInheritance
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 10,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 3,
          }
        }
        profiles={[]}
        updateProfiles={[MockFunction]}
      />
      <ProfileProjects
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 10,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 3,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly: edit permissions 1`] = `
<div>
  <div
    className="quality-profile-grid"
  >
    <div
      className="quality-profile-grid-left"
    >
      <ProfileRules
        profile={
          {
            "actions": {
              "edit": true,
            },
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 10,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 3,
          }
        }
      />
      <ProfileExporters
        exporters={[]}
        profile={
          {
            "actions": {
              "edit": true,
            },
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 10,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 3,
          }
        }
      />
      <ProfilePermissions
        profile={
          {
            "actions": {
              "edit": true,
            },
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 10,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 3,
          }
        }
      />
    </div>
    <div
      className="quality-profile-grid-right"
    >
      <ProfileInheritance
        profile={
          {
            "actions": {
              "edit": true,
            },
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 10,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 3,
          }
        }
        profiles={[]}
        updateProfiles={[MockFunction]}
      />
      <ProfileProjects
        profile={
          {
            "actions": {
              "edit": true,
            },
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 10,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 3,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly: is default profile, no active rules 1`] = `
<div>
  <div
    className="quality-profile-grid"
  >
    <div
      className="quality-profile-grid-left"
    >
      <ProfileRules
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 0,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": true,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 0,
          }
        }
      />
      <ProfileExporters
        exporters={[]}
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 0,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": true,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 0,
          }
        }
      />
    </div>
    <div
      className="quality-profile-grid-right"
    >
      <Alert
        className="big-spacer-bottom"
        variant="warning"
      >
        quality_profiles.warning.is_default_no_rules
      </Alert>
      <ProfileInheritance
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 0,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": true,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 0,
          }
        }
        profiles={[]}
        updateProfiles={[MockFunction]}
      />
      <ProfileProjects
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 0,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": true,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly: no active rules (same as default) 1`] = `
<div>
  <div
    className="quality-profile-grid"
  >
    <div
      className="quality-profile-grid-left"
    >
      <ProfileRules
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 0,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 0,
          }
        }
      />
      <ProfileExporters
        exporters={[]}
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 0,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 0,
          }
        }
      />
    </div>
    <div
      className="quality-profile-grid-right"
    >
      <ProfileInheritance
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 0,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 0,
          }
        }
        profiles={[]}
        updateProfiles={[MockFunction]}
      />
      <ProfileProjects
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 0,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly: projects associated, no active rules 1`] = `
<div>
  <div
    className="quality-profile-grid"
  >
    <div
      className="quality-profile-grid-left"
    >
      <ProfileRules
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 0,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 10,
          }
        }
      />
      <ProfileExporters
        exporters={[]}
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 0,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 10,
          }
        }
      />
    </div>
    <div
      className="quality-profile-grid-right"
    >
      <Alert
        className="big-spacer-bottom"
        variant="warning"
      >
        quality_profiles.warning.used_by_projects_no_rules
      </Alert>
      <ProfileInheritance
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 0,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 10,
          }
        }
        profiles={[]}
        updateProfiles={[MockFunction]}
      />
      <ProfileProjects
        profile={
          {
            "activeDeprecatedRuleCount": 2,
            "activeRuleCount": 0,
            "childrenCount": 0,
            "depth": 1,
            "isBuiltIn": false,
            "isDefault": false,
            "isInherited": false,
            "key": "key",
            "language": "js",
            "languageName": "JavaScript",
            "name": "name",
            "projectCount": 10,
          }
        }
      />
    </div>
  </div>
</div>
`;
